dashboard-mongo-proxy/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-mongodb-api
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dashboard-mongodb-api.level1.eks004.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-mongodb-api
              servicePort: 3000
